# navigator

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  r.cmd  r.sh
.claude/: settings.local.json
crates/navigator/: Cargo.toml  build.rs
crates/navigator-config/: Cargo.toml
crates/navigator-config/src/: lib.rs  shortcuts.rs
crates/navigator-config/tests/: config.rs
crates/navigator-core/: Cargo.toml
crates/navigator-core/src/: entry.rs  error.rs  event.rs  lib.rs  path.rs  selection.rs
crates/navigator-core/tests/: entry.rs  path.rs  selection.rs  this_pc.rs
crates/navigator-fs/: Cargo.toml
crates/navigator-fs/src/: lib.rs
crates/navigator-fs/tests/: drives.rs  scan.rs  search.rs
crates/navigator-gui/: Cargo.toml
crates/navigator-gui/src/: accel.rs  actions.rs  app.rs  clipboard.rs  context_menu.rs  dialog.rs  dialogs.rs  elevated.rs  extract.rs  history.rs  lib.rs  listview.rs  model.rs  new_folder.rs  ops_window.rs  options.rs  perf.rs  plugins.rs  preflight.rs  progress.rs  props.rs  remote_cache.rs  search.rs  shortcut_editor.rs  speech.rs  viewer.rs  watcher.rs  window.rs
crates/navigator-gui/tests/: accel.rs  actions.rs  clipboard.rs  columns.rs  history.rs  model.rs  preflight.rs
crates/navigator-plugin-api/: Cargo.toml
crates/navigator-plugin-api/src/: abi.rs  host.rs  lib.rs  loader.rs
crates/navigator-prism/: Cargo.toml  build.rs
crates/navigator-prism/src/: lib.rs  sys.rs
crates/navigator-rclone/: Cargo.toml
crates/navigator-rclone/src/: lib.rs  log.rs  op.rs
crates/navigator-rclone/tests/: driver.rs  log_parser.rs
crates/navigator/src/: main.rs
plugins/sample/: Cargo.toml
plugins/sample/src/: lib.rs
scripts/: release.ps1
