[package]
name = "navigator-fs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
navigator-core = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[dev-dependencies]
tempfile = "3"
