[package]
name = "navigator-plugin-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
navigator-core = { workspace = true }
libloading     = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
