[package]
name = "navigator-rclone"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
navigator-core     = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
crossbeam-channel  = { workspace = true }
parking_lot        = { workspace = true }

[dev-dependencies]
tempfile = "3"
